Fixed all alignment, Completed the register page, Added text

--- a/css/about.css
+++ b/css/about.css
@@ -33,3 +33,10 @@
     display:flex;
     flex-direction: column;
 }
+
+.TextToBeWritten
+{
+    color:white;
+    margin-left:215px;
+    font-size:large;
+}
