--- a/css/navbar.css
+++ b/css/navbar.css
@@ -18,20 +18,7 @@ html
     width: 100vw;
     overflow: auto;
 }
-#services
-{
-    background-color: black;
-    height: 100vh;
-    width: 100vw;
-    overflow: auto;
-}
-#register
-{
-    background-color: red;
-    height: 100vh;
-    width: 100vw;
-    overflow: auto; 
-}
+
 
 @font-face /* This is for loading the font; Giving the name monserrat and load the font from given location*/
 {
